--- a/package.json
+++ b/package.json
@@ -6,7 +6,9 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "move-static": "cp -a ./node_modules/@pdftron/pdfjs-express/public/. ./public/webviewer/lib",
+    "setup": "mkdir -p ./public/webviewer/lib && npm run move-static"
   },
   "dependencies": {
     "@pdftron/pdfjs-express": "^8.7.4",
